--- a/popcorn_challenge.html
+++ b/popcorn_challenge.html
@@ -3,9 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>Airlines!!</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./popcorn_challenge_style.css">
+    <section class="head">
+      <!--Main Title of the webpage-->
+      <h1>Puerto Rico Airlines</h1>
+      <!--Navigation menu with buttons-->
+      <div class="nav-button-group">
+          <button>Home</button>
+          <button>Flights</button>
+          <button>Support</button>
+          <button>Login</button>
+      </div>
+    </section>
   </head>
   <body>
-
+    <!--sectioning off the body of the webpage-->
+    <section class="main-options">
+      <!--flight subcategory with button-->
+      <div class = "flights">
+        <h2>Flights</h2>
+        <p>Come check out our sweet flights!</p>
+        <p>Direct flights available daily!</p>
+        <button>Lets go</button>
+      </div>
+     <!--group rate subcategory with button-->
+     <div class = "group-trips">
+      <h3>Group Trips</h3>
+      <p>We offer great group rates! For families with 4 members to huge gatherings with 50+!</p>
+      <button>Group Rates</button>
+    </div>
+    <!--discount flights subcategory with button-->
+    <div class = "discount-flights">
+      <h4>Discount Flights</h4>
+      <p>Discount flights available for individuals! Single chair filler tickes for low rates!</p>
+      <button>Jump in</button>
+    </div>
+    </section>
   </body>
 </html>
+
