--- a/popcorn_challenge.html
+++ b/popcorn_challenge.html
@@ -17,28 +17,30 @@
     </section>
   </head>
   <body>
-    <!--sectioning off the body of the webpage-->
-    <section class="main-options">
-      <!--flight subcategory with button-->
-      <div class = "flights">
-        <h2>Flights</h2>
-        <p>Come check out our sweet flights!</p>
-        <p>Direct flights available daily!</p>
-        <button>Lets go</button>
-      </div>
-     <!--group rate subcategory with button-->
-     <div class = "group-trips">
-      <h3>Group Trips</h3>
+    <!--flight subcategory with button-->
+    <div class = "flights">
+      <h2>Flights</h2>
+      <p>Come check out our sweet flights!</p>
+      <p>Direct flights available daily!</p>
+      <button>Lets go</button>
+    </div>
+    <!--group rate subcategory with button-->
+    <div class = "group-trips">
+      <h2>Group Trips</h2>
       <p>We offer great group rates! For families with 4 members to huge gatherings with 50+!</p>
       <button>Group Rates</button>
     </div>
     <!--discount flights subcategory with button-->
     <div class = "discount-flights">
-      <h4>Discount Flights</h4>
+      <h2>Discount Flights</h2>
       <p>Discount flights available for individuals! Single chair filler tickes for low rates!</p>
       <button>Jump in</button>
     </div>
-    </section>
+    <div class = "about-us">
+      <h2>About us</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exrecitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute inure dolor in reprehenderit in voluptate velit ese cilium dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <button>Learn More</button>
+    </div>
   </body>
 </html>
 
